# assignment_Codec

./: CMakeLists.txt  README.md  assignment_Codec.xml
app/scripts/: assignemnt_Codec-app.xml
smoke-test/: CMakeLists.txt  test.cpp  test.xml
smoke-test/fixtures/: fixture.xml
src/: Codec.cpp  Codec.h  main.cpp
src/idl/: assignment_Codec.thrift
